# rocket-todo-rest-api

./: .env  Cargo.toml
src/: main.rs
src/api/: todo_api.rs
src/models/: todo_model.rs
src/repository/: mongodb_repo.rs
