[package]
name = "rocket_todo_rest_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version="0.5.0-rc.1", features = ["json"]}
serde = "1.0.141"
dotenv = "0.15.0"

[dependencies.mongodb]
version = "2.3.0"
default_features = false
features = ["sync"]